# tauri

./: README.md  mkdocs.yml  package-lock.json  package.json  vite.config.ts
.codeium/windsurf/: cascade-guidelines.md
.github/workflows/: documentation.yml
docs/: README.md  index.md  project-overview.md
docs-planning/: API.md  SDD.md  SDP.md  SRS.md
docs-windsurf/: windsurf-setup.md
docs/designs/: assets.md
docs/doc-system-upgrade/: ai-automation-analysis.md  documentation-system-upgrade.md  documentation-upgrade-plan.md  gap_analysis.md
docs/planning/: API.md  SDD.md  SDP.md  SRS.md  TestPlan.md
docs/planning/audits/: API-audit-20250221.md
docs/planning/audits/API/: API-audit-20250221.md  API-audit-20250224-1.md  API-audit-20250224-2.md  API-audit-20250224-3.md
docs/planning/audits/SRS/: SRS-audit-20250224-1.md  SRS-audit-20250224-2.md  SRS-audit-20250224-3.md
docs/planning/audits/TestPlan/: TestPlan-audit-20250225-1.md  (+3 more)
docs/scripts/: doc_consistency.py  traceability_matrix.py
docs/templates/: ai_review_template.md  document_template.md  review_schedule.md  review_template.md  update_workflow.md
docs/traceability/: consistency_report.md  consistency_results.json  gap_analysis.md  requirement_ids.md  traceability_matrix.json  traceability_matrix.md
src/: App.css  App.tsx  index.html  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  error.rs  main.rs  mcp.rs  window_manager.rs
src/components/: BuddyList.tsx  ChatWindow.tsx  Login.tsx
src/utils/: window.ts
