[package]
name = "tauri-application"
version = "0.1.0"
description = "Tauri Desktop Application with AIM-inspired UI"
authors = ["Preston Sparks"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.1", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.26", features = ["json"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.57"
log = "0.4.21"
mcp_rust_sdk = "1.3.0-rc2"
sled = "0.34.7"

[features]
# this feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Bundle options
[package.metadata.bundle]
identifier = "com.tauri.application"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
resources = []
copyright = ""
category = "DeveloperTool"
short_description = ""
long_description = ""

# Optimize for size in release mode
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true